implement endpoints for checge user data and delete account
